--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 body{
- background-color:palevioletred;   
+ background-color:rgb(21, 110, 228);   
 }
 .nav{ 
  margin:20px;
@@ -29,8 +29,8 @@ body{
     margin: 20px;
     color: #fff;
 }
-.active{
-    color: palevioletred;
+.node{
+    color: rgb(197, 44, 90);
 }
 
 .form{
@@ -69,7 +69,7 @@ textarea{
 input[type="submit"]{
     padding: 8px 18px;
     border: none;
-    background-color:palevioletred;
+    background-color:rgb(37, 82, 231);
     color:white;
     border-radius: 12px;
     margin-top: 20px;
